--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,2 @@
-include versioneer.py
-include pyzdd/_version.py
 include LICENSE
-include requirements.txt
-include setup.cfg
+include pyproject.toml
