--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,13 @@
+[build-system]
+requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
+build-backend = "setuptools.build_meta"
+
+# Enable version inference
+[tool.setuptools_scm]
+
 [tool.black]
 line-length = 99
-target-version = ['py37', 'py38']
+target-version = ['py38', 'py39', 'py310']
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -17,3 +24,6 @@ exclude = '''
   | docs
 )/
 '''
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
