--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,38 @@
-name: ci
+name: testing
 
 on:
   push:
     branches: [master, develop]
 
 jobs:
-  pip-install:
-    runs-on: ubuntu-18.04
+  tests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10"]
+
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Display Python version
-      run: python -c "import sys; print(sys.version)"
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors on undefined names
-        flake8 --count --select=E9,F63,F7,F82 --show-source --statistics pyzdd tests
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics pyzdd tests
-    - name: Install pyzdd
-      run: |
-        pip install --upgrade pip
-        pip --version
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-        pip install -e .
-    - name: Test with pytest
-      run: |
-        pytest --cov=pyzdd --cov-config=setup.cfg --cov-report=xml tests/
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      # https://github.com/actions/cache/blob/main/examples.md#python---pip
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('**/setup.py') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.python-version }}-pip-
+
+      - name: Install
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[dev]
+
+      - name: Test with pytest
+        run: |
+          python -m pytest -v --cov=pyzdd --cov-config=setup.cfg --cov-report=xml tests/
