--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -9,12 +9,12 @@ on:
 
 jobs:
   test-tdzdd:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
-    - name: Install dependancies
+    - name: Install dependencies
       run: |
         sudo apt-get install -y make gcc g++
     - name: make
