--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -2,7 +2,7 @@ name: TdZdd test
 
 on:
   push:
-    branches: [master, develop]
+    branches: [main, develop]
     paths:
     - '**.cpp'
     - '**.hpp'
