--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -17,7 +17,10 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install -y make gcc g++
-    - name: make
+    - name: Test
       run: |
-        cd src/test
-        make test
+        cd src
+        cmake -S . -B build
+        cmake --build build
+        cd build
+        ctest -vv
