--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -17,7 +17,7 @@ jobs:
         sudo apt-get install -y make gcc g++
     - name: Test
       run: |
-        cd src/test
+        cd xtal_tdzdd/test
         cmake -S . -B build
         cmake --build build
         cd build
