--- a/.gitignore
+++ b/.gitignore
@@ -188,6 +188,14 @@ src/example/*
 **/Testing/*
 
 # CMake
-**/CMakeFiles/*
-**/Makefile
-**/cmake_install.cmake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
