--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -12,9 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
     - name: Install dependencies
       run: |
-        sudo apt-get install -y make gcc g++
+        sudo apt-get install -y make cmake gcc g++
+
     - name: Test
       run: |
         cd xtal_tdzdd/test
