--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y make cmake gcc g++
+
       - name: Build wheels
         uses: pypa/cibuildwheel@2.6.1
         env:
@@ -35,6 +39,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y make cmake gcc g++
 
       - name: Build sdist
         run: pipx run build --sdist
