--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y make cmake gcc g++
+
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
