Supply binary dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,6 @@ add_subdirectory(./xtal_tdzdd)
 
 message(STATUS ${pybind11_SOURCE_DIR})
 
-add_subdirectory(${pybind11_SOURCE_DIR})
+add_subdirectory(${pybind11_SOURCE_DIR} ${pybind11_BINARY_DIR})
 pybind11_add_module(pyzdd_ ./xtal_tdzdd/wrapper.cpp)
 target_link_libraries(pyzdd_ PRIVATE xtal_tdzdd)
