--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: pypi-${{ matrix.python }}-${{ matrix.buildplat[1] }}
           path: ./wheelhouse/*.whl
 
   build_sdist:
@@ -71,6 +72,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: pypi-sdist
           path: dist/*.tar.gz
 
   deploy-pypi:
@@ -81,7 +83,8 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: artifact
+          pattern: pypi-*
+          merge-multiple: true
           path: dist
 
       - name: Publish package to TestPyPI
