--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ before-build = "yum install -y make cmake gcc gcc-c++"
 
 [tool.black]
 line-length = 99
-target-version = ['py38', 'py39', 'py310']
+target-version = ['py39', 'py310']
 include = '\.pyi?$'
 exclude = '''
 /(
