--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y make cmake gcc g++
+          cmake --version
 
       - uses: actions/setup-python@v5
         with:
