--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,8 +20,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y make cmake gcc g++
-          cmake --version
+          sudo apt-get install -y make gcc g++
+      - name: Setup cmake
+        uses: jwlawson/actions-setup-cmake@v2
+        with:
+          cmake-version: '3.16.x'
 
       - uses: actions/setup-python@v5
         with:
