--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"
   workflow_dispatch:
 
 jobs:
@@ -63,9 +64,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get install -y make cmake gcc g++
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: make gcc g++
+          version: 1.0
 
       - name: Build sdist
         run: pipx run build --sdist
