--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -46,4 +46,4 @@ jobs:
 
       - name: Test with pytest
         run: |
-          python -m pytest -v --cov=pyzdd --cov-config=setup.cfg --cov-report=xml tests/
+          python -m pytest -v --cov=pyzdd --cov-report=xml tests/
